--- a/intro2R/data_in_R_prepare.Rmd
+++ b/intro2R/data_in_R_prepare.Rmd
@@ -14,11 +14,10 @@ Open RStudio and create a new project, for more info see <https://support.rstudi
 
 Learn more about packrat see <https://rstudio.github.io/packrat/>
 
-Set some options and make sure the packages 'knitr', 'tidyverse', 'reshape2', and 'gridExtra' are installed (if not install it), and then load
+Set some options and make sure the packages 'knitr', 'tidyverse', 'reshape2', and 'gr are installed (if not install it), and then load
 
 In the R console run the following commands
-
-```r
+```{r setup, results='hide', warning=FALSE, error=FALSE, message=FALSE, collapse=TRUE}
 if (!any(rownames(installed.packages()) == "knitr")){
   install.packages("knitr")
 }
@@ -28,59 +27,16 @@ if (!any(rownames(installed.packages()) == "tidyverse")){
   install.packages("tidyverse")
 }
 library(tidyverse)
-```
 
-```
-## ── Attaching packages ─────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
-```
-
-```
-## ✔ ggplot2 3.1.0     ✔ purrr   0.2.5
-## ✔ tibble  2.0.1     ✔ dplyr   0.7.8
-## ✔ tidyr   0.8.2     ✔ stringr 1.3.1
-## ✔ readr   1.3.1     ✔ forcats 0.3.0
-```
-
-```
-## ── Conflicts ────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
-```
-
-```r
 if (!any(rownames(installed.packages()) == "reshape2")){
   install.packages("reshape2")
 }
 library(reshape2)
-```
 
-```
-## 
-## Attaching package: 'reshape2'
-```
-
-```
-## The following object is masked from 'package:tidyr':
-## 
-##     smiths
-```
-
-```r
 if (!any(rownames(installed.packages()) == "gridExtra")){
   install.packages("gridExtra")
 }
 library(gridExtra)
-```
-
-```
-## 
-## Attaching package: 'gridExtra'
-```
-
-```
-## The following object is masked from 'package:dplyr':
-## 
-##     combine
 ```
 
 Learn more about the tidyverse see <https://www.tidyverse.org>.
@@ -114,16 +70,14 @@ Try executing the code chunks in the R Notebook.
 This is the stats file generated after running samtools stats on a bam file generated from running BWA MEM.
 
 In the R console run the following command.
-
-```r
+```{r download1, eval=FALSE, results='hide', warning=FALSE, error=FALSE, message=FALSE, collapse=TRUE}
 download.file("https://raw.githubusercontent.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop/master/intro2R/Data_in_R_files/bwa_mem_Stats.log", "bwa_mem_Stats.log")
 ```
 
 ### Download the template Markdown workshop document and open it
 
 In the R console run the following command
-
-```r
+```{r download2, eval=FALSE, results='hide', warning=FALSE, error=FALSE, message=FALSE, collapse=TRUE}
 download.file("https://raw.githubusercontent.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop/master/intro2R/data_in_R.Rmd", "data_in_R.Rmd")
 ```
 
@@ -140,9 +94,8 @@ output:
     html_document: default
 ---</code></pre>
 
-
 ### What are we going to do?
 
 We will recreate some of the plots generated with plot-bamstats on the same file
 
-You can view the output of plot-bamstats -> <https://rawgit.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop/master/intro2R/Data_in_R_files/bwa_mem_Stats/bwa_mem_Stats.html>
+You can view the output of plot-bamstats -> [bwa_mem_stats.html](Data_in_R_files/bwa_mem_Stats/bwa_mem_Stats.html)
